--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -6,7 +6,7 @@
     border: none;
     vertical-align: baseline;
     background: #e0e1e2 none;
-    color: rgba (0,0,0,.6);
+    color: rgba(0,0,0,.6);
     font-family: 'lato';
     margin: 0 .25em 0 0;
     padding: .78571429em 1.5em .78571429em;
@@ -25,6 +25,7 @@
 .login.button:active {
     background-color: #babbbc;
     color: rgba(0,0,0,.9);
+    box-shadow: 0 0 0 1px transparent inset,none;
 }
 
 .login.button:focus {
