--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Racing+Sans+One');
+
 .HeaderWrapper {
     background-color: aqua;
     height: 50px;
@@ -11,4 +13,13 @@
     width: 50vw;
     justify-content: space-around;
     background-color: burlywood;
+}
+
+.logo {
+    font-family: 'Racing Sans One';
+    font-size: 24pt;
+}
+
+img {
+    height: 100%;
 }
