--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -12,7 +12,7 @@
     align-items: center;
 }
 
-.intExt, .int, .ext {
+.intExt, .int, .ext, .rows {
     width: 30vw;
     background-color: black;
     background: rgba(0,0,0,0.5);
@@ -21,9 +21,15 @@
     font-size: 200%;
     color: rgb(206, 205, 205);
     height: 50vh;
+    transition: 0.5s;
 }
 
-button {
+.intExt:hover, .int:hover, .ext:hover, .rows:hover {
+    transition: .5s;
+    background: rgba(0,0,0,0.75);
+}
+
+.servicesButton {
     padding: 10px;
     width: 100px;
     font-family: 'Fjalla One';
@@ -31,9 +37,10 @@ button {
     background-color: black;
     color: white;
     border: none;
+    transition: 0.5s;
 }
 
-button:hover {
+.servicesButton:hover {
     background-color: darkgray;
 }
 
@@ -47,7 +54,7 @@ button:hover {
         justify-content: space-around;
         align-items: center;
     }
-    .intExt, .int, .ext {
+    .intExt, .int, .ext, .rows {
         width: 90vw;
         font-size: 90%;
         height: 30vh;
@@ -64,7 +71,7 @@ button:hover {
         justify-content: space-around;
         align-items: center;
     }
-    .intExt, .int, .ext {
+    .intExt, .int, .ext, .rows {
         width: 90vw;
         font-size: 130%;
         height: 30vh;
