--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,41 +1,18 @@
 @import url('https://fonts.googleapis.com/css?family=Lato');
 
 .login.button {
-    display: inline-block;
-    min-height: 1em;
+    padding: 10px;
+    margin: 4px 0;
+    margin-top: 30px;
+    width: 130px;
+    font-family: 'Fjalla One';
+    font-size: 15px;
+    background-color: black;
+    color: white;
     border: none;
-    vertical-align: baseline;
-    background: #e0e1e2 none;
-    color: rgba(0,0,0,.6);
-    font-family: 'lato';
-    margin: 0 .25em 0 0;
-    padding: .78571429em 1.5em .78571429em;
-    text-transform: none;
-    text-shadow: none;
-    font-weight: 700;
-    line-height: 1em;
-    font-style: normal;
-    text-align: center;
-    text-decoration: none;
-    border-radius: .28571429rem;
-    box-shadow: 0 0 0 1px transparent inset, 0 0 0 0 rgba(34, 36, 38, 0.15) inset;
-    user-select: none;
-}
-
-.login.button:active {
-    background-color: #babbbc;
-    color: rgba(0,0,0,.9);
-    box-shadow: 0 0 0 1px transparent inset,none;
-}
-
-.login.button:focus {
-    background-color: #cacbcd;
-    color: rgba(0,0,0,.8);
+    transition: 0.5s;
 }
 
 .login.button:hover {
-    background-color: #cacbcd;
-    background-image: none;
-    box-shadow: 0 0 0 1px transparent inset, 0 0 0 0 rgba(34, 36, 38, 0.15) inset;
-    color: rgba(0,0,0,.8)
+    background-color: darkgray;
 }
